--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,10 @@
     "burma-calendar": "^1.2.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "myanmar-calendar": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.18.0",
     "react-to-print": "^2.14.15",
     "styled-components": "^6.0.9"
   },
