--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "myanmar-calendar": "^1.1.0",
+    "quagga": "^0.12.1",
     "react": "^18.2.0",
+    "react-barcode": "^1.4.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-to-print": "^2.14.15",
