--- a/api/.env.development
+++ b/api/.env.development
@@ -3,6 +3,7 @@ DB_NAME="she_pos"
 DB_USER="root"
 DB_PASSWORD=""
 SECRET_KEY="shhhhhhhhh!@"
+PORT=8001
 
 # DB_HOST="178.128.107.245"
 # DB_NAME="she_pos"
