--- a/client/.gitignore
+++ b/client/.gitignore
@@ -8,6 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+../api/node_modules
 dist
 dist-ssr
 *.local
@@ -25,3 +26,5 @@ dist-ssr
 
 .env.development
 .env.production
+../api/.env.development
+../api/.env.production
