--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-barcode": "^1.4.6",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.4",
     "react-router-dom": "^6.18.0",
     "react-to-print": "^2.14.15",
     "styled-components": "^6.0.9"
